fixed the problem with overlapping sections by tweaking the auto-fit rule

--- a/chamber/styles/styles.css
+++ b/chamber/styles/styles.css
@@ -123,8 +123,8 @@ h1 {
 
 .grid, .spotlight, .weather, .current-events {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
-    column-gap: .5rem;
+    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+    column-gap: 1rem;
     justify-content: center;
     
 }
@@ -139,6 +139,10 @@ h1 {
     justify-content: center;
     align-items: center;
     box-shadow: 0 0 12px rgb(0, 0, 0 , 0.4);
+}
+
+.current-events img {
+    display: block;
 }
 
 .grid h2 {
